--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,9 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+
+# custom environment variables
+MODULE_AUTHOR_NAME=
+MODULE_AUTHOR_EMAIL=
+MODULE_VENDOR=
