--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
+        "mhmiton/laravel-modules-livewire": "^4.3",
         "nwidart/laravel-modules": "^11.1"
     },
     "require-dev": {
